# plotly-agent

./: .gitignore  LICENSE  README.md  example_test.ipynb  pyproject.toml  setup.py
plotly_agent/: __init__.py  agent.py  detect.py  extract.py  toolkit.py
plotly_agent/evaluate/: __init__.py  judge_text.py
